set margins for tablet and mobile

--- a/main/index.html
+++ b/main/index.html
@@ -59,7 +59,7 @@
                   srcset="assets/images/home/desktop/image-hero-seraph.jpg 1110w, assets/images/home/tablet/image-hero-seraph.jpg 573w, assets/images/home/mobile/image-hero-seraph.jpg 375w"
                   src="assets/images/home/mobile/image-hero-seraph.jpg" alt="picture of a building">
                 <div class="slide__content">
-                  <h1>Seraph Station</h1>
+                  <h1>Seraph <br> Station</h1>
                   <p>The Seraph Station project challenged us to design a unique station that would
                   transport people through time. The result is a fresh and futuristic model
                   inspired by space stations.</p>
@@ -84,7 +84,7 @@
                   srcset="assets/images/home/desktop/image-hero-trinity.jpg 1110w, assets/images/home/tablet/image-hero-trinity.jpg 573w, assets/images/home/mobile/image-hero-trinity.jpg 375w"
                   src="assets/images/home/mobile/image-hero-trinity.jpg" alt="picture of a building">
                   <div class="slide__content">
-                    <h1>TrinityBank Tower</h1>
+                    <h1>Trinity Bank <br> Tower</h1>
                     <p>Trinity Bank challenged us to make a concept for a 84 story building located
                     in the middle of a city with a high earthquake frequency. For this project we
                     used curves to blend design and stability to meet our objectives.</p>
