complet refactoring to simplify the index page

--- a/main/index.html
+++ b/main/index.html
@@ -47,7 +47,7 @@
                   srcset="assets/images/home/desktop/image-hero-paramour.jpg 1110w, assets/images/home/tablet/image-hero-paramour.jpg 573w, assets/images/home/mobile/image-hero-paramour.jpg 375w"
                   src="assets/images/home/mobile/image-hero-paramour.jpg" alt="picture of a building">
                 <div class="slide__content">
-                  <h1>Project Paramour</h1>
+                  <h1>Project <br> Paramour</h1>
                   <p>Project made for an art museum near Southwest London. Project Paramour is
                   a statement of bold, modern architecture.</p>
                   <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
@@ -93,6 +93,7 @@
               </div>
 
             </div>
+
           </div>
 
           <div class="slide-nav display@md">
