--- a/main/index.html
+++ b/main/index.html
@@ -99,10 +99,10 @@
           </div>
 
           <div class="slide-nav display@md">
-              <button class="btn btn--number btn--number--current"  class="slide-link" data-slide="slide1">01</button>
-              <button class="btn btn--number" class="slide-link" data-slide="slide2">02</button>
-              <button class="btn btn--number" class="slide-link" data-slide="slide3">03</button>
-              <button class="btn btn--number" class="slide-link" data-slide="slide4">04</button>
+            <button class="btn btn--number btn--number--current"  data-slide="slide1">01</button>
+            <button class="btn btn--number" data-slide="slide2">02</button>
+            <button class="btn btn--number" data-slide="slide3">03</button>
+            <button class="btn btn--number" data-slide="slide4">04</button>
           </div>
         </div>
       </div>
