fixed size of slides

--- a/main/index.html
+++ b/main/index.html
@@ -74,7 +74,7 @@
                   srcset="assets/images/home/desktop/image-hero-federal.jpg 1110w, assets/images/home/tablet/image-hero-federal.jpg 573w, assets/images/home/mobile/image-hero-federal.jpg 375w"
                   src="assets/images/home/mobile/image-hero-federal.jpg" alt="picture of a building">
                 <div class="slide__content">
-                  <h1>Federal II Tower</h1>
+                  <h1>Federal II <br>Tower</h1>
                   <p>A sequel theme project for a tower originally built in the 1800s. We achieved
                   this with a striking look of brutal minimalism with modern touches.</p>
                   <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
