fixed bug in slide

--- a/main/index.html
+++ b/main/index.html
@@ -64,7 +64,7 @@
                   <p>The Seraph Station project challenged us to design a unique station that would
                   transport people through time. The result is a fresh and futuristic model
                   inspired by space stations.</p>
-                  <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+                  <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
 
                 </div>
               </div>
@@ -77,7 +77,7 @@
                   <h1>Federal II <br>Tower</h1>
                   <p>A sequel theme project for a tower originally built in the 1800s. We achieved
                   this with a striking look of brutal minimalism with modern touches.</p>
-                  <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+                  <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
                 </div>
               </div>
 
@@ -90,7 +90,7 @@
                     <p>Trinity Bank challenged us to make a concept for a 84 story building located
                     in the middle of a city with a high earthquake frequency. For this project we
                     used curves to blend design and stability to meet our objectives.</p>
-                    <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+                    <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
                   </div>
               </div>
 
