--- a/main/portfolio.html
+++ b/main/portfolio.html
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="project-cards">
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-seraph.jpg 294w, assets/images/portfolio/tablet/image-seraph.jpg 480w, assets/images/portfolio/mobile/image-seraph.jpg 250w"
               src="assets/images/portfolio/mobile/image-seraph.jpg" alt="picture of hotel near water">
@@ -52,7 +52,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-eebox.jpg 294w, assets/images/portfolio/tablet/image-eebox.jpg 480w, assets/images/portfolio/mobile/image-eebox.jpg 250w"
               src="assets/images/portfolio/mobile/image-eebox.jpg" alt="picture of hotel near water">
@@ -62,7 +62,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-federal.jpg 294w, assets/images/portfolio/tablet/image-federal.jpg 480w, assets/images/portfolio/mobile/image-federal.jpg 250w"
               src="assets/images/portfolio/mobile/image-federal.jpg" alt="picture of hotel near water">
@@ -72,7 +72,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-del-sol.jpg 294w, assets/images/portfolio/tablet/image-del-sol.jpg 480w, assets/images/portfolio/mobile/image-del-sol.jpg 250w"
               src="assets/images/portfolio/mobile/image-del-sol.jpg" alt="picture of hotel near water">
@@ -82,7 +82,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-prototype.jpg 294w, assets/images/portfolio/tablet/image-prototype.jpg 480w, assets/images/portfolio/mobile/image-prototype.jpg 250w"
               src="assets/images/portfolio/mobile/image-prototype.jpg" alt="picture of hotel near water">
@@ -92,7 +92,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-228b.jpg 294w, assets/images/portfolio/tablet/image-228b.jpg 480w, assets/images/portfolio/mobile/image-228b.jpg 250w"
               src="assets/images/portfolio/mobile/image-228b.jpg" alt="picture of hotel near water">
@@ -102,7 +102,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-edelweiss.jpg 294w, assets/images/portfolio/tablet/image-edelweiss.jpg 480w, assets/images/portfolio/mobile/image-edelweiss.jpg 250w"
               src="assets/images/portfolio/mobile/image-edelweiss.jpg" alt="picture of hotel near water">
@@ -112,7 +112,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-netcry.jpg 294w, assets/images/portfolio/tablet/image-netcry.jpg 480w, assets/images/portfolio/mobile/image-netcry.jpg 250w"
               src="assets/images/portfolio/mobile/image-netcry.jpg" alt="picture of hotel near water">
@@ -122,7 +122,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-hypers.jpg 294w, assets/images/portfolio/tablet/image-hypers.jpg 480w, assets/images/portfolio/mobile/image-hypers.jpg 250w"
               src="assets/images/portfolio/mobile/image-hypers.jpg" alt="picture of hotel near water">
@@ -132,7 +132,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-sxiv.jpg 294w, assets/images/portfolio/tablet/image-sxiv.jpg 480w, assets/images/portfolio/mobile/image-sxiv.jpg 250w"
               src="assets/images/portfolio/mobile/image-sxiv.jpg" alt="picture of hotel near water">
@@ -142,7 +142,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-trinity.jpg 294w, assets/images/portfolio/tablet/image-trinity.jpg 480w, assets/images/portfolio/mobile/image-trinity.jpg 250w"
               src="assets/images/portfolio/mobile/image-trinity.jpg" alt="picture of hotel">
@@ -152,7 +152,7 @@
             </div>
           </div>
 
-          <div class="project-card" id="project1">
+          <div class="project-card">
             <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
               srcset="assets/images/portfolio/desktop/image-paramour.jpg 294w, assets/images/portfolio/tablet/image-paramour.jpg 480w, assets/images/portfolio/mobile/image-paramour.jpg 250w"
               src="assets/images/portfolio/mobile/image-paramour.jpg" alt="picture of hotel near water">
