move hover code to component css

--- a/main/index.html
+++ b/main/index.html
@@ -151,14 +151,16 @@
             <div class="project-cards">
 
               <div class="project-card" id="project1">
-                <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                  srcset="assets/images/portfolio/desktop/image-del-sol.jpg 294w, assets/images/portfolio/tablet/image-del-sol.jpg 480w, assets/images/portfolio/mobile/image-del-sol.jpg 250w"
-                  src="assets/images/portfolio/mobile/image-del-sol.jpg" alt="picture of hotel near water">
-                <p class="large-number display@sm">1</p>
-                <div class="text-component">
-                  <h3>Project Del Sol</h3>
-                  <a class="link--subtle" href="portfolio.html">View All Projects</a>
-                </div>
+                <a href="portfolio.html">
+                  <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+                    srcset="assets/images/portfolio/desktop/image-del-sol.jpg 294w, assets/images/portfolio/tablet/image-del-sol.jpg 480w, assets/images/portfolio/mobile/image-del-sol.jpg 250w"
+                    src="assets/images/portfolio/mobile/image-del-sol.jpg" alt="picture of hotel near water">
+                  <p class="large-number display@sm">1</p>
+                  <div class="text-component">
+                    <h3>Project Del Sol</h3>
+                    <a class="link--subtle" href="portfolio.html">View All Projects</a>
+                  </div>
+                </a>
               </div>
 
               <div class="project-card" id="project2">
