remove links from card redundant

--- a/main/index.html
+++ b/main/index.html
@@ -158,7 +158,7 @@
                   <p class="large-number display@sm">1</p>
                   <div class="text-component">
                     <h3>Project Del Sol</h3>
-                    <a class="link--subtle" href="portfolio.html">View All Projects</a>
+                    <p>View All Projects</p>
                   </div>
                 </a>
               </div>
@@ -170,7 +170,7 @@
                 <p class="large-number display@sm">2</p>
                 <div class="text-component">
                   <h3>228B Tower</h3>
-                  <a class="link--subtle" href="portfolio.html">View All Projects</a>
+                  <p>View All Projects</p>
                 </div>
               </div>
 
@@ -181,7 +181,7 @@
                 <p class="large-number display@sm">3</p>
                 <div class="text-component">
                   <h3>Le Prototype</h3>
-                  <a class="link--subtle" href="portfolio.html">View All Projects</a>
+                  <p>View All Projects</p>
                 </div>
               </div>
 
