--- a/main/about.html
+++ b/main/about.html
@@ -37,16 +37,18 @@
     </section>
 
      <header class="header margin-top-menu">
-      <img src="assets/images/about/mobile/image-hero.jpg" class="width-100% block hide@sm" alt="">
-      <div class="container">
-        <h1 class="text--huge display@sm">About</h1>
-          <div class="header__content">
-            <div class="horizontal-line display@sm"></div>
-            <h2>Your team of professionals</h2>
-            <p>Our small team of world-class professionals will work with you every step of the way.
-              Strong relationships are at the core of everything we do. This extends to the
-              relationship our projects have with their surroundings.
-            </p>
+       <div class="header__img">
+        <img src="assets/images/about/mobile/image-hero.jpg" class="width-100% block hide@sm" alt="">
+        <div class="container">
+          <h1 class="text--huge display@sm">About</h1>
+            <div class="header__content">
+              <div class="horizontal-line display@sm"></div>
+              <h2>Your team of professionals</h2>
+              <p>Our small team of world-class professionals will work with you every step of the way.
+                Strong relationships are at the core of everything we do. This extends to the
+                relationship our projects have with their surroundings.
+              </p>
+          </div>
         </div>
       </div>
     </header>
