create header-card component

--- a/main/about.html
+++ b/main/about.html
@@ -36,21 +36,22 @@
       </div>
     </section>
 
-     <header class="header margin-top-menu">
-       <div class="header__img">
+     <header class="header-card margin-top-menu">
+       <div class="header-card__img">
         <img src="assets/images/about/mobile/image-hero.jpg" class="width-100% block hide@sm" alt="">
-        <div class="container">
-          <h1 class="text--huge display@sm">About</h1>
-            <div class="header__content">
-              <div class="horizontal-line display@sm"></div>
-              <h2>Your team of professionals</h2>
-              <p>Our small team of world-class professionals will work with you every step of the way.
-                Strong relationships are at the core of everything we do. This extends to the
-                relationship our projects have with their surroundings.
-              </p>
-          </div>
+      </div>
+      <div class="container">
+          <div class="header-card__content">
+            <h1 class="text--huge display@sm">About</h1>
+            <div class="horizontal-line display@sm"></div>
+            <h2>Your team of professionals</h2>
+            <p>Our small team of world-class professionals will work with you every step of the way.
+              Strong relationships are at the core of everything we do. This extends to the
+              relationship our projects have with their surroundings.
+            </p>
         </div>
       </div>
+
     </header>
 
     <main class="flow-content">
