--- a/main/contact.html
+++ b/main/contact.html
@@ -37,17 +37,17 @@
         </div>
       </section>
 
-      <header class="header margin-top-menu">
-        <div class="header__img">
+      <header class="header-card margin-top-menu">
+        <div class="header-card__img">
           <img src="assets/images/contact/mobile/image-hero.jpg" class="width-100% block hide@sm" alt="">
           <div class="white-box hide@sm"></div>
         </div>
         <div class="container">
-          <div class="header__content">
+          <div class="header-card__content">
             <h1 class="text--huge display@sm">Contact</h1>
             <div class="horizontal-line display@sm"></div>
-            <h2 class="margin-top-md">Tell us about your project</h2>
-            <p class="margin-top-md">We’d love to hear more about your project. Please, leave a message below or give
+            <h2>Tell us about your project</h2>
+            <p>We’d love to hear more about your project. Please, leave a message below or give
             us a call. We have two offices, one in Texas and one in Tennessee. If you find
             yourself nearby, come say hello!
             </p>
