--- a/main/about.html
+++ b/main/about.html
@@ -61,8 +61,8 @@
           <div class="heritage__main">
             <div class="heritage__content">
               <div class="horizontal-line"></div>
-              <h2 class="margin-bottom-lg margin-bottom-xxs@md">Our <br/>Heritage</h2>
               <div class="text-component">
+                <h2>Our <br/> Heritage</h2>
                 <p> Founded in 2007, we started as a trio of architects. Our complimentary skills and
                     relentless attention to detail turned Arch into one of the most sought after boutique
                     firms in the country.
