--- a/main/index.html
+++ b/main/index.html
@@ -111,11 +111,11 @@
     <main class="home flow-content">
 
       <section class="welcome">
-        <div class="container">
-          <div class="welcome__main position-relative">
+        <div class="container position-relative">
             <div class="horizontal-line hide@sm"></div>
             <h1 class="text--huge display@sm">Welcome</h1>
-            <div class="text-component">
+            <div class="grid-container">
+              <div class="text-component">
               <h2>Welcome to <br>Arch Studio</h2>
               <p>We have a unique network and skillset to help bring your projects to life. Our
               small team of highly skilled individuals combined with our large network put us
@@ -125,8 +125,9 @@
               <p>We work closely with our clients so that we understand the intricacies of each
               project. This allows us to work in harmony the surrounding area to create truly
               stunning projects that will stand the test of time.</p>
+              </div>
+              <div class="welcome__img"></div>
             </div>
-          </div>
         </div>
       </section>
 
