--- a/main/index.html
+++ b/main/index.html
@@ -164,25 +164,29 @@
               </div>
 
               <div class="project-card" id="project2">
-                <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                  srcset="assets/images/portfolio/desktop/image-228b.jpg 294w, assets/images/portfolio/tablet/image-228b.jpg 480w, assets/images/portfolio/mobile/image-228b.jpg 250w"
-                  src="assets/images/portfolio/mobile/image-228b.jpg" alt="picture of hotel near water">
-                <p class="large-number display@sm">2</p>
-                <div class="text-component">
-                  <h3>228B Tower</h3>
-                  <p>View All Projects</p>
-                </div>
+                <a href="portfolio.html">
+                  <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+                    srcset="assets/images/portfolio/desktop/image-228b.jpg 294w, assets/images/portfolio/tablet/image-228b.jpg 480w, assets/images/portfolio/mobile/image-228b.jpg 250w"
+                    src="assets/images/portfolio/mobile/image-228b.jpg" alt="picture of hotel near water">
+                  <p class="large-number display@sm">2</p>
+                  <div class="text-component">
+                    <h3>228B Tower</h3>
+                    <p>View All Projects</p>
+                  </div>
+              </a>
               </div>
 
               <div class="project-card" id="project3">
-                <img class="project-card__img" sizes="(min-width: 1024px) 300px, (min-width: 768px) 500px, 250px"
-                  srcset="assets/images/portfolio/desktop/image-prototype.jpg 294w, assets/images/portfolio/tablet/image-prototype.jpg 480w, assets/images/portfolio/mobile/image-prototype.jpg 250w"
-                  src="assets/images/portfolio/mobile/image-prototype.jpg" alt="picture of hotel near water">
-                <p class="large-number display@sm">3</p>
-                <div class="text-component">
-                  <h3>Le Prototype</h3>
-                  <p>View All Projects</p>
-                </div>
+                <a href="portfolio.html">
+                  <img class="project-card__img" sizes="(min-width: 1024px) 300px, (min-width: 768px) 500px, 250px"
+                    srcset="assets/images/portfolio/desktop/image-prototype.jpg 294w, assets/images/portfolio/tablet/image-prototype.jpg 480w, assets/images/portfolio/mobile/image-prototype.jpg 250w"
+                    src="assets/images/portfolio/mobile/image-prototype.jpg" alt="picture of hotel near water">
+                  <p class="large-number display@sm">3</p>
+                  <div class="text-component">
+                    <h3>Le Prototype</h3>
+                    <p>View All Projects</p>
+                  </div>
+              </a>
               </div>
 
             </div>
