--- a/main/about.html
+++ b/main/about.html
@@ -58,10 +58,11 @@
 
       <section class="heritage">
         <div class="container">
+
           <div class="heritage__main">
-            <div class="heritage__content">
-              <div class="horizontal-line"></div>
+
               <div class="text-component">
+                <div class="horizontal-line"></div>
                 <h2>Our <br/> Heritage</h2>
                 <p> Founded in 2007, we started as a trio of architects. Our complimentary skills and
                     relentless attention to detail turned Arch into one of the most sought after boutique
@@ -76,8 +77,7 @@
                     Our small team of world-class professionals provides input on every project.
                 </p>
               </div>
-            </div>
-            <div class="heritage__image"></div>
+              <div class="heritage__img"></div>
           </div>
 
         </div>
