--- a/main/index.html
+++ b/main/index.html
@@ -114,7 +114,7 @@
         <div class="container position-relative">
             <div class="horizontal-line hide@sm"></div>
             <h1 class="text--huge display@sm">Welcome</h1>
-            <div class="grid-container">
+            <div class="welcome__main">
               <div class="text-component">
               <h2>Welcome to <br>Arch Studio</h2>
               <p>We have a unique network and skillset to help bring your projects to life. Our
