--- a/main/about.html
+++ b/main/about.html
@@ -88,7 +88,7 @@
 
               <div class="card">
                 <img src="assets/images/about/desktop/avatar-jake.jpg" alt="face of Jake" class="card__img width-100%">
-                <h3 class="margin-top-lg">Jake Richards</h3>
+                <h3>Jake Richards</h3>
                 <p class="card__role">Chief Architect</p>
                 <div class="social">
                   <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
@@ -98,7 +98,7 @@
 
               <div class="card">
                 <img src="assets/images/about/desktop/avatar-thompson.jpg" alt="face of Thompson" class="card__img width-100%">
-                <h3 class="margin-top-lg">Thompson Smith</h3>
+                <h3>Thompson Smith</h3>
                 <p class="card__role">Head of Finance</p>
                 <div class="social">
                   <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
@@ -108,7 +108,7 @@
 
               <div class="card">
                 <img src="assets/images/about/desktop/avatar-jackson.jpg" alt="face of Jackson" class="card__img width-100%">
-                <h3 class="margin-top-lg">Jackson Rourke</h3>
+                <h3>Jackson Rourke</h3>
                 <p class="card__role">Lead Designer</p>
                 <div class="social">
                   <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
@@ -118,7 +118,7 @@
 
               <div class="card">
                 <img src="assets/images/about/desktop/avatar-maria.jpg" alt="face of maria" class="card__img width-100%">
-                <h3 class="margin-top-lg">Maria Simpson</h3>
+                <h3>Maria Simpson</h3>
                 <p class="card__role">Senior Architect</p>
                 <div class="social">
                   <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
