smaller margin on bottom

--- a/main/about.html
+++ b/main/about.html
@@ -83,7 +83,7 @@
       <section class="leaders">
         <div class="container">
           <div class="leaders__main">
-            <h2 class="margin-bottom-xl">The <br/>Leaders</h2>
+            <h2 class="margin-bottom-lg">The <br/>Leaders</h2>
             <div class="cards">
 
               <div class="card">
