--- a/main/portfolio.html
+++ b/main/portfolio.html
@@ -44,9 +44,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-seraph.jpg 294w, assets/images/portfolio/tablet/image-seraph.jpg 480w, assets/images/portfolio/mobile/image-seraph.jpg 250w"
-                src="assets/images/portfolio/mobile/image-seraph.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-seraph.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-seraph.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-seraph.jpg" alt="picture of hotel near water">
+              </picture>
               <div class="text-component">
                 <h3>Seraf Station</h3>
                 <p class="link--subtle">September 2019</p>
@@ -56,9 +58,12 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-eebox.jpg 294w, assets/images/portfolio/tablet/image-eebox.jpg 480w, assets/images/portfolio/mobile/image-eebox.jpg 250w"
-                src="assets/images/portfolio/mobile/image-eebox.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-eebox.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-eebox.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-eebox.jpg"
+                  alt="picture of hotel near water">
+              </picture>
               <div class="text-component">
                 <h3>Eebox Building</h3>
                 <p class="link--subtle">August 2017</p>
@@ -68,9 +73,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-federal.jpg 294w, assets/images/portfolio/tablet/image-federal.jpg 480w, assets/images/portfolio/mobile/image-federal.jpg 250w"
-                src="assets/images/portfolio/mobile/image-federal.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-federal.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-federal.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-federal.jpg" alt="picture of building">
+              </picture>
               <div class="text-component">
                 <h3>Federal Building</h3>
                 <p class="link--subtle">March 2017</p>
@@ -80,9 +87,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-del-sol.jpg 294w, assets/images/portfolio/tablet/image-del-sol.jpg 480w, assets/images/portfolio/mobile/image-del-sol.jpg 250w"
-                src="assets/images/portfolio/mobile/image-del-sol.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-del-sol.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-del-sol.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-del-sol.jpg" alt="picture of building">
+              </picture>
               <div class="text-component">
                 <h3>Project Del Sol</h3>
                 <p class="link--subtle">January 2016</p>
@@ -92,9 +101,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-prototype.jpg 294w, assets/images/portfolio/tablet/image-prototype.jpg 480w, assets/images/portfolio/mobile/image-prototype.jpg 250w"
-                src="assets/images/portfolio/mobile/image-prototype.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-prototype.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-prototype.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-prototype.jpg" alt="picture of building">
+              </picture>
               <div class="text-component">
                 <h3>Le Prototype</h3>
                 <p class="link--subtle">October 2015</p>
@@ -104,9 +115,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-228b.jpg 294w, assets/images/portfolio/tablet/image-228b.jpg 480w, assets/images/portfolio/mobile/image-228b.jpg 250w"
-                src="assets/images/portfolio/mobile/image-228b.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-228b.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-228b.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-228b.jpg" alt="picture of building">
+              </picture>
               <div class="text-component">
                 <h3>228B Tower</h3>
                 <p class="link--subtle">April 2015</p>
@@ -116,9 +129,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-edelweiss.jpg 294w, assets/images/portfolio/tablet/image-edelweiss.jpg 480w, assets/images/portfolio/mobile/image-edelweiss.jpg 250w"
-                src="assets/images/portfolio/mobile/image-edelweiss.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-edelweiss.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-edelweiss.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-edelweiss.jpg" alt="picture of building">
+              </picture>
               <div class="text-component">
                 <h3>Grand Edelweiss Hotel</h3>
                 <p class="link--subtle">December 2013</p>
@@ -128,9 +143,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-netcry.jpg 294w, assets/images/portfolio/tablet/image-netcry.jpg 480w, assets/images/portfolio/mobile/image-netcry.jpg 250w"
-                src="assets/images/portfolio/mobile/image-netcry.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-netcry.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-netcry.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-netcry.jpg" alt="picture of building">
+              </picture>
               <div class="text-component">
                 <h3>Netcry Tower</h3>
                 <p class="link--subtle">August 2012</p>
@@ -140,9 +157,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-hypers.jpg 294w, assets/images/portfolio/tablet/image-hypers.jpg 480w, assets/images/portfolio/mobile/image-hypers.jpg 250w"
-                src="assets/images/portfolio/mobile/image-hypers.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-hypers.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-hypers.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-hypers.jpg" alt="picture of building">
+              </picture>
               <div class="text-component">
                 <h3>Hypers</h3>
                 <p class="link--subtle">January 2012</p>
@@ -152,9 +171,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-sxiv.jpg 294w, assets/images/portfolio/tablet/image-sxiv.jpg 480w, assets/images/portfolio/mobile/image-sxiv.jpg 250w"
-                src="assets/images/portfolio/mobile/image-sxiv.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-sxiv.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-sxiv.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-sxiv.jpg" alt="picture of building">
+              </picture>
               <div class="text-component">
                 <h3>SXIV Tower</h3>
                 <p class="link--subtle">March 2011</p>
@@ -164,9 +185,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-trinity.jpg 294w, assets/images/portfolio/tablet/image-trinity.jpg 480w, assets/images/portfolio/mobile/image-trinity.jpg 250w"
-                src="assets/images/portfolio/mobile/image-trinity.jpg" alt="picture of hotel">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-trinity.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-trinity.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-trinity.jpg" alt="picture of building">
+              </picture>
               <div class=" text-component">
                 <h3>Trinity Bank Tower</h3>
                 <p class="link--subtle">September 2010</p>
@@ -176,9 +199,11 @@
 
           <div class="project-card">
             <a href="#">
-              <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
-                srcset="assets/images/portfolio/desktop/image-paramour.jpg 294w, assets/images/portfolio/tablet/image-paramour.jpg 480w, assets/images/portfolio/mobile/image-paramour.jpg 250w"
-                src="assets/images/portfolio/mobile/image-paramour.jpg" alt="picture of hotel near water">
+              <picture>
+                <source srcset="assets/images/portfolio/desktop/image-paramour.jpg" media="(min-width: 1024px)" />
+                <source srcset="assets/images/portfolio/tablet/image-paramour.jpg" media="(min-width: 768px)" />
+                <img class="project-card__img" src="assets/images/portfolio/mobile/image-paramour.jpg" alt="picture of building">
+              </picture>
               <div class="text-component">
                 <h3>Project Paramour</h3>
                 <p class="link--subtle">February 2008</p>
